fixing scroll behaviour bug on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,10 @@
   --blue: #1976D2; }
 
 html {
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+  -webkit-scroll-behavior: smooth;
+  -moz-osx-scroll-behavior: smooth;
+ }
 
 body {
   margin: 0;
